<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Texas Gaming Championships app</string>
    <string name="th_tab_1">1</string>
    <string name="th_tab_2">2</string>
    <string name="th_tab_3">3</string>
    <string name="th_tab_4">4</string>
    <string name="th_tab_5">5</string>
    <string name="th_tab_6">6</string>
    <string name="s_button_share">Share</string>
    <string name="s_share_text">Share this app with your friends and everyone you know by tapping the share button!</string>
    <string name="s_share_message">Download AirbrushKing Services app at http://www.AirbrushKingApp.com</string>
	<string name="s_title">Links</string>    
	<string name="s_title_2">Tap Logos &amp; Links Below</string>
    <string name="s_link_1">Shop</string>
    <string name="s_link_2">Gallery</string>        
    <string name="s_link_3">Services</string>
    <string name="s_link_4">Specials</string>        
    <string name="s_link_5">Press</string>
    <string name="s_link_6">Events</string>        
    <string name="s_link_7">Consulting</string>
    <string name="s_link_8">Testimonials</string>
    <string name="s_link_9">Packages</string>
    <string name="s_link_10">Custom Mobile Apps</string>
    <string name="s_link_11">Videos</string>
    <string name="s_link_12">Weddings</string>
    <string name="s_link_logo_1">Now Hiring For All Promo Team Positions!</string>
    <string name="s_link_logo_2">Start Your Career &amp; Business Today!</string>
    <string name="s_link_logo_3">Start Your Modeling Career Today!</string>
    <string name="sm_title">Social Media</string>
    <string name="sm_notification">Notifications</string>
    <string name="sm_notification_label">Tap Icon Above To View Notifications</string>
    <string name="sm_notification_subtitle">Inbox</string>
    <string name="sm_facebook">Facebook</string>
    <string name="sm_google_plus">Google+</string>
    <string name="sm_my_space">MySpace</string>
    <string name="sm_twitter">Twitter</string>
    <string name="sm_instagram">Instagram</string>
    <string name="sm_youtube">Youtube</string>
	<string name="wv_loading_text">Please Wait</string>
	<string name="empty_list">Notification messages not present</string> 
	<string name="inbox">Inbox Messages:</string>
	<string name="sm_linkedin">LinkedIn</string>

</resources>
