<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/background_white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"	
    tools:context=".ShareActivity" >

	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="center_horizontal" >	    
    
		   	<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="@dimen/s_image_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/app_logo" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/padding_views_normal"
		        android:textSize="@dimen/text_size_normal"
				android:gravity="center"
		        android:text="@string/s_share_text" />
		    
		    <Button
		        android:id="@+id/btShare"
		        android:layout_width="@dimen/s_button_width"
		        android:layout_height="@dimen/s_button_height"
		        android:layout_marginTop="@dimen/padding_views_normal"
		        android:textSize="@dimen/text_size_normal"
		        android:text="@string/s_button_share" />   
		        
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_marginTop="@dimen/padding_views_big"
		        android:background="@color/AirbrushKing"
				android:gravity="center" />  
				
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/padding_views_big"
		        android:textSize="@dimen/text_size_big"
		        android:textColor="@color/AirbrushKing"
		        android:text="@string/s_title" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/padding_views_big"
		        android:textSize="@dimen/text_size_small"
		        android:text="@string/s_title_2" />		    
		    
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginTop="@dimen/padding_views_very_big" >    
				
			    <TextView
			        android:id="@+id/tvLink1"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
			        android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"			        
			        android:text="@string/s_link_1" />
			    
			    <TextView
			        android:id="@+id/tvLink2"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_2" />
			    
			    <TextView
			        android:id="@+id/tvLink3"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_3" />
			    
			    <TextView
			        android:id="@+id/tvLink4"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_4" />    
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginTop="@dimen/padding_views_big" >    
				
			    <TextView
			        android:id="@+id/tvLink5"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_5" />

			    <TextView
			        android:id="@+id/tvLink7"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_7" />
			   
			    			    
			    <TextView
			        android:id="@+id/tvLink6"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"        
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_6" />
			    
			    <TextView
			        android:id="@+id/tvLink8"
			        android:layout_width="0dp"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"        
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_8" /> 
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginTop="@dimen/padding_views_big" >
			    
			    <TextView
			        android:id="@+id/tvLink9"
			        android:layout_width="70dip"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_9" />
			    
			    <TextView
			        android:id="@+id/tvLink10"
			        android:layout_width="130dip"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_margin="@dimen/s_link_margin"
			        android:background="@color/AirbrushKing"
			        android:gravity="center"
			        android:singleLine="true"
			        android:text="@string/s_link_10"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold" />
			    
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginTop="@dimen/padding_views_big" >
			    
			    <TextView
			        android:id="@+id/tvLink11"
			        android:layout_width="70dip"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_11" />
			    
			    <TextView
			        android:id="@+id/tvLink12"
			        android:layout_width="70dip"
			        android:layout_height="@dimen/s_link_height"
			        android:layout_weight="1"
			        android:layout_margin="@dimen/s_link_margin"
					android:background="@color/AirbrushKing"			        
			        android:gravity="center"
			        android:singleLine="true"
			        android:textColor="@color/White"
			        android:textSize="@dimen/text_size_very_small"
			        android:textStyle="bold"
			        android:text="@string/s_link_12" />
			    
			</LinearLayout>  
			
			
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_marginTop="@dimen/padding_views_big"
		        android:background="@color/AirbrushKing"
				android:gravity="center" />	
			
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginTop="@dimen/padding_views_big" >
		    
			   	<ImageView
			   	    android:id="@+id/ivLinkLogo1"
				    android:layout_width="wrap_content"
				    android:layout_height="@dimen/s_image_height"
				    android:layout_gravity="center_horizontal"
				    android:adjustViewBounds="true"		    
				    android:src="@drawable/abk_promo_team" />
			   	
			   	<TextView
			   	    android:id="@+id/tvLinkLogo1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/padding_views_small"
				    android:layout_gravity="center_horizontal"
				    android:textSize="@dimen/text_size_small"
				    android:text="@string/s_link_logo_1" />
			</LinearLayout>
				
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginTop="@dimen/padding_views_big" >
		    
			   	<ImageView
			   	    android:id="@+id/ivLinkLogo2"
				    android:layout_width="wrap_content"
				    android:layout_height="@dimen/s_image_height"
				    android:layout_gravity="center_horizontal"
				    android:adjustViewBounds="true"		    
				    android:src="@drawable/abk_business" />
			   	
			   	<TextView
			   	    android:id="@+id/tvLinkLogo2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/padding_views_small"
				    android:layout_gravity="center_horizontal"
				    android:textSize="@dimen/text_size_small"
				    android:text="@string/s_link_logo_2" />
			</LinearLayout>  
				
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginTop="@dimen/padding_views_big" >
		    
			   	<ImageView
			   	    android:id="@+id/ivLinkLogo3"
				    android:layout_width="wrap_content"
				    android:layout_height="@dimen/s_image_height"
				    android:layout_gravity="center_horizontal"
				    android:adjustViewBounds="true"		    
				    android:src="@drawable/abk_models" />
			   	
			   	<TextView
			   	    android:id="@+id/tvLinkLogo3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/padding_views_small"
				    android:layout_gravity="center_horizontal"
				    android:textSize="@dimen/text_size_small"
				    android:text="@string/s_link_logo_3" />
			</LinearLayout>  
		</LinearLayout>
	</ScrollView>	
</LinearLayout>
