<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
	android:background="@drawable/background_white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    tools:context=".SocialMediaActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_very_big"
        android:textColor="@color/AirbrushKing"
        android:text="@string/sm_notification" />
    
    <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/activity_vertical_margin"
		    android:orientation="vertical">
	    
		   	<ImageView
		   	    android:id="@+id/ivNotifications"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:layout_gravity="center_horizontal"
			    android:src="@drawable/ic_notification" />
		   	
		   	 	<TextView
		   	    android:id="@+id/tvNotificationsInbox"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_small"
			    android:text="@string/sm_notification_subtitle" />
		   	
		   	<TextView
		   	    android:id="@+id/tvNotifications"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_notification_label" />
 	</LinearLayout>  
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_very_big"
        android:textColor="@color/AirbrushKing"
        android:text="@string/sm_title" />
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="@dimen/padding_views_very_big" >
	    
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:layout_marginRight="@dimen/padding_views_very_big" >
	    
		   	<ImageView
		   	    android:id="@+id/ivFacebook"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/social_img_facebook" />
		   	
		   	<TextView
		   	    android:id="@+id/tvFacebook"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_facebook" />
 		</LinearLayout>  

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:layout_marginRight="@dimen/padding_views_very_big" >
		   		 			
		   	<ImageView
		   	    android:id="@+id/ivGooglePlus"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/social_img_google_plus" />
		   	
		   	<TextView
		   	    android:id="@+id/tvGooglePlus"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_google_plus" />	   	
 		</LinearLayout>  

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >	
			   	
		   	<ImageView
		   	    android:id="@+id/ivLinkedIn"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/social_img_linkedin" />

		   	<TextView
		   	    android:id="@+id/tvLinkedin"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_linkedin" />
 		</LinearLayout> 
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="@dimen/padding_views_very_big" >
	    
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:layout_marginRight="@dimen/padding_views_very_big" >
		   	
		   	<ImageView
		   	    android:id="@+id/ivTwitter"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/social_img_twitter" />
		   	
		   	<TextView
		   	    android:id="@+id/tvTwitter"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_twitter" />		   	
   		</LinearLayout>

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:layout_marginRight="@dimen/padding_views_very_big" >
			
		   	<ImageView
		   	    android:id="@+id/ivInstagram"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/social_img_instagram" />
		   	
		   	<TextView
		   	    android:id="@+id/tvInstagram"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_instagram" />		   	
		</LinearLayout>
	   	
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		   	<ImageView
		   	    android:id="@+id/ivYoutube"
			    android:layout_width="@dimen/sm_icon_width"
			    android:layout_height="@dimen/sm_icon_height"
			    android:adjustViewBounds="true"
			    android:src="@drawable/social_img_youtube" />
		   	
		   	<TextView
		   	    android:id="@+id/tvYoutube"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/padding_views_small"
			    android:layout_gravity="center_horizontal"
			    android:textSize="@dimen/text_size_very_small"
			    android:text="@string/sm_youtube" />		   	
   		</LinearLayout>
	</LinearLayout>
</LinearLayout>
